--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -34,8 +34,8 @@
             </select>
     </div>
     
-    <div id="quoteDisplay">
-        <p>Loading quote...</p>
+    <div id="syncStatus" style="padding: 10px; background-color: #ffc; border: 1px solid #ddd; margin-bottom: 15px;">
+        🔄 **Sync Status:** Initializing...
     </div>
 
     <div class="section-control">
